--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -53,11 +53,11 @@ body {
   }
 }
 
-video-js.video-js.vjs-fluid:not(.vjs-audio-only-mode) {
-  padding-top: 56.25%;
-}
-
 .brightcove-player {
   max-width: 960px;
-}
+  width: 100%;
 
+  .vjs-fluid:not(.vjs-audio-only-mode) {
+    padding-top: 56.25%;
+  }
+}
