--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -23,7 +23,7 @@ body {
   width: 100%;
   text-align: center;
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 5vh auto 0 auto;
   padding: 0 2rem;
 }
 
@@ -34,6 +34,29 @@ body {
     color: $font_color;
     margin-bottom: 2rem;
     text-align: center;
+  }
+}
+
+.content {
+  &__explanation {
+    font-size: 1.2rem;
+    margin-top: 2rem;
+
+    &-title {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    &-warning {
+        color: red;
+        font-size: 1.2rem;
+        margin-bottom: 1rem;
+    }
+
+    &-text {
+        line-height: 2;
+        margin-bottom: 2rem;
+    }
   }
 }
 
