--- a/src/assets/scss/pages/problem-1.scss
+++ b/src/assets/scss/pages/problem-1.scss
@@ -1,21 +1,10 @@
 .problem-1 {
-    .content__explanation {
-        &-title {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-        }
-        margin-top: 2rem;
-    
-    
-        &-warning {
-            color: red;
-            font-size: 1.2rem;
-            margin-bottom: 1rem;
-        }
-    
-        &-text {
-            line-height: 2;
-            margin-bottom: 2rem;
+    .brightcove-player {
+        max-width: 960px;
+        width: 100%;
+      
+        .vjs-fluid:not(.vjs-audio-only-mode) {
+          padding-top: 56.25%;
         }
     }
 }
