--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -63,7 +63,12 @@ body {
         line-height: 2;
         margin-bottom: 2rem;
     }
-}
+
+    &-image {
+        width: 100%;
+        margin-bottom: 2rem;  
+    }
+  }
 }
 
 .footer {
