--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -7,3 +7,5 @@
 @import 'pages/problem-1';
 @import 'pages/problem-2';
 @import 'pages/problem-5';
+@import 'pages/problem-6';
+@import 'pages/problem-7';
